# split_expense

./: README.md  pyproject.toml
split_expense/: app.py
