[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splitexpense"
version = "0.1.0"
description = "A Tkinter-based app to split expenses among people and export summaries to Excel."
authors = [
    { name="Pancham (MuddyHope)", email="ljpancham@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "pandas",
]

[project.urls]
Homepage = "https://github.com/MuddyHope/split_expense"
Repository = "https://github.com/MuddyHope/split_expense"

